Bug 291003: fdlibm no longer used on Linux as recent C library there do the job on its own. r=shaver